
Branch YARN-2928: Timeline Server Next Generation: Phase 1

  INCOMPATIBLE CHANGES

  NEW FEATURES

    YARN-3063. Bootstrapping TimelineServer next generation module. (zjshen)

    YARN-3030. Set up TS aggregator with basic request serving structure and
    lifecycle. (Sangjin Lee via zjshen)

    YARN-3041. Added the overall data model of timeline service next gen.
    (zjshen)

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

Trunk - Unreleased 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    YARN-2438. yarn-env.sh cleanup (aw)

    YARN-2472. yarn-daemons.sh should jsut call yarn directly (Masatake Iwasaki
    via aw)

    YARN-2437. start-yarn.sh/stop-yarn should give info (Varun Saxena via aw)

    YARN-2796. deprecate sbin/yarn-daemon.sh (aw)

    YARN-2980. Move health check script related functionality to hadoop-common
    (Varun Saxena via aw)

    YARN-3168. Convert site documentation from apt to markdown (Gururaj Shetty
    via aw)

    YARN-3199. Fair Scheduler documentation improvements (Rohit Agarwal via
    aw)

    YARN-2280. Resource manager web service fields are not accessible
    (Krisztian Horvath via aw)

    YARN-3261. rewrite resourcemanager restart doc to remove roadmap bits (Gururaj Shetty via aw)

  OPTIMIZATIONS

  BUG FIXES

    YARN-524 TestYarnVersionInfo failing if generated properties doesn't
    include an SVN URL. (stevel)

    YARN-1471. The SLS simulator is not running the preemption policy 
    for CapacityScheduler (Carlo Curino via cdouglas)

    YARN-2436. [post-HADOOP-9902] yarn application help doesn't work (aw)

    YARN-2525. yarn logs command gives error on trunk (Akira AJISAKA via aw)

    YARN-3002. YARN documentation needs updating post-shell rewrite (aw)

    YARN-2428. LCE default banned user list should have yarn (Varun
    Saxena via aw)

    YARN-2355. MAX_APP_ATTEMPTS_ENV may no longer be a useful env var
    for a container (Darrell Taylor via aw)
